# kinetic-ocaml-client

./: .gitignore  META  Makefile  README.md  _tags  dune  kinetic-client.opam
examples/: test_it.ml
src/: compile_proto.sh  dune  kinetic.client.mllib  kinetic.ml  kinetic.mli  kinetic.proto.piqi  kinetic_config.ml  kinetic_error.ml  kinetic_integration.ml  kinetic_network.ml  kinetic_piqi.patch  kinetic_session.ml  kinetic_tag.ml  kinetic_util.ml
