(library
  (name kinetic_client)
  (public_name kinetic-client)
  (wrapped false)
  (libraries lwt lwt.unix lwt_log)
  (flags :standard -w -3-27-32-39)
)

(rule
 (targets kinetic_types.ml kinetic_types.mli kinetic_pb.ml kinetic_pb.mli)
 (deps kinetic.proto)
 (action (run %{bin:ocaml-protoc} -ml_out %{deps})))
